--- a/templates/sobre.html
+++ b/templates/sobre.html
@@ -11,10 +11,14 @@
   <title>INFOPRODUTOS</title>
 </head>
 <style>
-  h1, h2, p, li{
+  h1,
+  h2,
+  p,
+  li {
     color: #230D73;
   }
-    </style>
+</style>
+
 <body>
   <header>
     <div class="flex">
@@ -26,21 +30,21 @@
       </a>
     </div>
   </header>
-    <div class="interface">
-      <section id="sobre">
-    <h1 style="color: #230D73; font-size: 3rem;">
-      A INFOPRODUTOS.ORG é a parceira ideal para empresas e profissionais que buscam:
-    </h1>
-    <img src="../static/fundo.png" id="fundo-png" alt="">
-      <li>
-        Soluções criativas e inovadoras para seus projetos de comunicação.
-      </li>
-      <li>
-        Uma equipe experiente e dedicada a entregar resultados excepcionais.
-      </li>
-      <li>
-        Uma parceria de confiança para impulsionar o crescimento e o sucesso do seu negócio.
-      </li>
+  <div class="interface">
+    <section id="sobre">
+      <h1 style="font-size: 1rem; text-align: center;">
+        A INFOPRODUTOS.ORG é a parceira ideal para empresas e profissionais que buscam:
+        </h1>
+        <img src="../static/fundo.png" id="fundo-png" alt="">
+        <li>
+          Soluções criativas e inovadoras para seus projetos de comunicação.
+        </li>
+        <li>
+          Uma equipe experiente e dedicada a entregar resultados excepcionais.
+        </li>
+        <li>
+          Uma parceria de confiança para impulsionar o crescimento e o sucesso do seu negócio.
+        </li>
       <h1 style="color: #230D73;">
         Nossa Missão
       </h1>
@@ -65,45 +69,45 @@
       <h1 style="color: #230D73;">
         Nossos Valores
       </h1>
-    <ul>
-      <li>
-        Criatividade
-      </li>
-      <li>
-        Paixão
-      </li>
-      <li>
-        Excelência
-      </li>
-      <li>
-        Comprometimento
-      </li>
-      <li>
-        Transparência
-      </li>
-      <li>
-        Respeito
-      </li>
-    </ul>
-    <h1 style="color: #230D73;">
-      O que nos diferencia
+      <ul>
+        <li>
+          Criatividade
+        </li>
+        <li>
+          Paixão
+        </li>
+        <li>
+          Excelência
+        </li>
+        <li>
+          Comprometimento
+        </li>
+        <li>
+          Transparência
+        </li>
+        <li>
+          Respeito
+        </li>
+      </ul>
+      <h1 style="color: #230D73;">
+        O que nos diferencia
       </h1>
       <ul>
-      <li>
-        Experiência e Expertise
-      </li>
-      <li>
-        Criatividade Inovadora
-      </li>
-      <li>
-        Visão Estratégica
-      </li>
-      <li>
-        Foco em Resultados
-      </li>
-      <li>
-        Atendimento Personalizado
-      </li>
+        <li>
+          Experiência e Expertise
+        </li>
+        <li>
+          Criatividade Inovadora
+        </li>
+        <li>
+          Visão Estratégica
+        </li>
+        <li>
+          Foco em Resultados
+        </li>
+        <li>
+          Atendimento Personalizado
+        </li>
       </ul>
       <h2 style="text-align: center; color: #230D73;">
         <strong>
