--- a/static/style.css
+++ b/static/style.css
@@ -31,7 +31,7 @@ a {
     color: white;
 }
 .interface {
-    padding: 30px;
+    padding: 5px;
     padding-top: 30vh;
     background-color: white;
 }
@@ -295,7 +295,6 @@ ul#cursos video {
 ul#cursos {
     margin-top: 50px;
     padding: 15px;
-    columns: 2;
 }
 
 
@@ -350,7 +349,7 @@ ul {
 }
 
 #sobre ul {
-    columns: 2;
+    display: flexbox;
     background-color: white;
     box-shadow: 0px 0px 0px;
     border-radius: 1px solid gray;
